# pqp-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/: pqp_python.cpp
src/pqp/: __init__.py
